# cwru_data_marshal

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TROUBLESHOOTING.md  docker-compose.yml
.devcontainer/: Dockerfile  README.devcontainer.md  devcontainer.json
clients/fk_client/: fk_client_main.cpp
clients/viz_client/: viz_client_main.cpp
cmake/: FindPugiXML.cmake
data/: index.jsonl  latest.json
data/mrd/: 2025-09-13T06:16:42.270Z_000003.mrd  index.jsonl  latest.json
docker/: .dockerignore  Dockerfile  base.Dockerfile  clients.Dockerfile  dumpbox.Dockerfile  marshal.Dockerfile  playback.Dockerfile
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  PURPOSE.md
include/: atomic_write.hpp
include/common/: pose.hpp
services/dumpbox/: dumpbox_main.cpp
services/playback/: playback_main.cpp
src/: marshal_http.hpp  marshal_main.cpp  marshal_state.hpp  marshal_ws.hpp  mk_mrd.cpp
tests/: test_http_endpoints.cpp  test_pose_store.cpp  test_ws_broadcast.cpp
